app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    :root {
        --border-width: 0;
        --background: 0 0% 100%;
        --foreground: 224 71.4% 4.1%;
        --card: 0 0% 100%;
        --card-foreground: 224 71.4% 4.1%;
        --popover: 0 0% 100%;
        --popover-foreground: 224 71.4% 4.1%;
        --primary: 262.1 83.3% 57.8%;
        --primary-foreground: 210 20% 98%;
        --secondary: 220 14.3% 95.9%;
        --secondary-foreground: 220.9 39.3% 11%;
        --muted: 220 14.3% 95.9%;
        --muted-foreground: 220 8.9% 46.1%;
        --accent: 220 14.3% 95.9%;
        --accent-foreground: 220.9 39.3% 11%;
        --destructive: 0 84.2% 60.2%;
        --destructive-foreground: 210 20% 98%;
        --border: 220 13% 91%;
        --input: 220 13% 91%;
        --ring: 262.1 83.3% 57.8%;
        --radius: 0.5rem;
    }

    .dark {
        --border-width: 0;
        --background: 224 71.4% 4.1%;
        --foreground: 210 20% 98%;
        --card: 224 71.4% 4.1%;
        --card-foreground: 210 20% 98%;
        --popover: 224 71.4% 4.1%;
        --popover-foreground: 210 20% 98%;
        --primary: 263.4 70% 50.4%;
        --primary-foreground: 210 20% 98%;
        --secondary: 215 27.9% 16.9%;
        --secondary-foreground: 210 20% 98%;
        --muted: 215 27.9% 16.9%;
        --muted-foreground: 217.9 10.6% 64.9%;
        --accent: 215 27.9% 16.9%;
        --accent-foreground: 210 20% 98%;
        --destructive: 0 62.8% 30.6%;
        --destructive-foreground: 210 20% 98%;
        --border: 215 27.9% 16.9%;
        --input: 215 27.9% 16.9%;
        --ring: 263.4 70% 50.4%;
    }
}

@layer base {
    * {
        @apply border-border;
    }

    body {
        @apply bg-background text-foreground;
    }
}

body::-webkit-scrollbar {
    scrollbar-width: thin; /* "auto" o "thin"  */
    scrollbar-color: #FDE68A #010206; /* color del thumb y del track */
    width: 8px;
}


body::-webkit-scrollbar-track {
    width: 3px;
    background: transparent;
}

body::-webkit-scrollbar-thumb {
    background: linear-gradient(120deg, #c084fc, #FDE68A); /* color del thumb */
    border-radius: 6px;
    width: 3px;
}

.my-bg-image {
    background-image: url('../public/bg/testeo26.png');
    background-size: 100% 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: fixed;
}
.my-bg-image2 {
    background-image: url('../public/bg/testeo27.png');
    background-size: 100% 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

#works {
}

.line {
    position: absolute;
    bottom: 0.65rem;
    left: 0;
    height: 2px;
    width: 0;
    background-color: #FDE68A;
    /*background: linear-gradient(-90deg, hsl(275, 100%, 80%), hsl(345, 100%, 80%), hsl(9, 100%, 80%), hsl(39, 100%, 80%), hsl(69, 100%, 80%), hsl(159, 100%, 80%), hsl(248, 100%, 80%), hsl(275, 100%, 80%), hsl(345, 100%, 80%), hsl(9, 100%, 80%), hsl(39, 100%, 80%), hsl(69, 100%, 80%), hsl(159, 100%, 80%), hsl(248, 100%, 80%), hsl(275, 100%, 80%));*/
    background-size: 200% 100%;
    transition: left 0.5s ease, width 0.3s ease;
    /*animation: rainbow 6s linear infinite;*/
}

.rainbow-gradient {
    background: linear-gradient(-90deg, hsl(275, 100%, 80%), hsl(345, 100%, 80%), hsl(9, 100%, 80%), hsl(39, 100%, 80%), hsl(69, 100%, 80%), hsl(159, 100%, 80%), hsl(248, 100%, 80%), hsl(275, 100%, 80%), hsl(345, 100%, 80%), hsl(9, 100%, 80%), hsl(39, 100%, 80%), hsl(69, 100%, 80%), hsl(159, 100%, 80%), hsl(248, 100%, 80%), hsl(275, 100%, 80%));
    background-size: 200% 100%;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    animation: rainbow 6s linear infinite;
}

.rainbow-gradient:hover {
    animation-duration: 1s;
}

@keyframes rainbow {
    0% {
        background-position: 100% 0%;
    }
    100% {
        background-position: 0% 0%;
    }
}

@keyframes rotate {
    0% {
        transform: rotate(0deg);
    }
    40% {
        transform: rotate(360deg) scale(125%) translate(0, 0px) rotate(-7deg);
    }
    100% {
        transform: scale(100%);
    }
}

.job-animation {
    animation: rotate 1s ease-in-out;
}

@keyframes twink {
    0%, 100% {
        transform: rotate(0deg) scale(1);
    }
    33% {
        transform: rotate(-3deg) scale(1.15);
    }
    66% {
        transform: rotate(3deg) scale(1.15);
    }
}

.home-animation {
    animation: twink 0.9s ease-in-out;
}

@keyframes sparkle {
    0% {
        filter: drop-shadow(0 0 0) drop-shadow(0 0 0) drop-shadow(0 0 0);
        color: inherit;
    }
    50% {
        filter: drop-shadow(0 0 4px #FDE68A) drop-shadow(0 0 4px #FDE68A) drop-shadow(0 0 4px #FDE68A);
    }
    99% {
        filter: drop-shadow(0 0 0) drop-shadow(0 0 0) drop-shadow(0 0 0);
        color: #FDE68A;
    }
}

.experience-animation {
    animation: twink 0.9s ease-in-out;
}

@keyframes inverseRotate {
    0% {
        transform: rotate(0deg);
    }
    40% {
        transform: rotate(-360deg) scale(125%) translate(0, 0px) rotate(7deg);
    }
    100% {
        transform: scale(100%);
    }
}

.contact-animation {
    animation: inverseRotate 1s linear;
}

.active {
    animation: sparkle 0.75s linear;
}

.button-spark {
    animation: sparkle 0.35s linear;
}

@keyframes sparkle-violet {
    0% {
        filter: drop-shadow(0 0 0) drop-shadow(0 0 0) drop-shadow(0 0 0);
        color: inherit;
    }
    50% {
        filter: drop-shadow(0 0 4px #c084fc) drop-shadow(0 0 4px #c084fc) drop-shadow(0 0 4px #c084fc);
    }
    99% {
        filter: drop-shadow(0 0 0) drop-shadow(0 0 0) drop-shadow(0 0 0);
        color: #c084fc;
    }
}

.button-spark-violet {
    animation: sparkle-violet 0.35s linear;
}

.button-spark-alt {
    animation: sparkle 0.35s linear;
}

.button-spark-violet-alt {
    animation: sparkle-violet 0.35s linear;
}
/* ... */

